# YADRO_club

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  Тестовое задание С++.docx
buildFiles/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  YADRO.sln  YADRO.vcxproj  YADRO.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildFiles/YADRO.dir/Debug/: YADRO.exe.recipe  YADRO.ilk  computer_club.cpp.ifc.dt.d.json  computer_club.cpp.ifc.dt.module.json.command  computer_club.cpp.module.json  computer_club.h_6B39B21B11728E2B.ifc.dt.d.json  computer_club.h_6B39B21B11728E2B.ifc.dt.module.json.command  event.cpp.ifc.dt.d.json  event.cpp.ifc.dt.module.json.command  event.cpp.module.json  event.h_5A6E92545E64709.ifc.dt.d.json  event.h_5A6E92545E64709.ifc.dt.module.json.command  main.cpp.ifc.dt.d.json  main.cpp.ifc.dt.module.json.command  main.cpp.module.json
buildFiles/YADRO.dir/Debug/YADRO.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  YADRO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
buildFiles/YADRO.dir/Debug/YADRO_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
buildFiles/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildFiles/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
buildFiles/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildFiles/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
data/: input10.txt  input2.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
src/: computer_club.cpp  computer_club.h  event.cpp  event.h  main.cpp
src/utils/: exceptions.h  parse_utils.h  types.h
